[gd_scene load_steps=6 format=3 uid="uid://bwqwwgpcio61s"]

[ext_resource type="Script" path="res://stages/dino_run/dino_run.gd" id="1_7chjb"]
[ext_resource type="Texture2D" uid="uid://u3rmjuhti633" path="res://assets/textures/dino_texture/sky.png" id="2_nlqoj"]
[ext_resource type="Texture2D" uid="uid://bdwrxumtuf1ht" path="res://assets/textures/dino_texture/cloud.png" id="3_qejmi"]
[ext_resource type="PackedScene" uid="uid://cehri52robli2" path="res://stages/dino_run/dino_ground.tscn" id="4_20vic"]
[ext_resource type="PackedScene" uid="uid://cugrvdodhxjak" path="res://entities/player/dino_player/dino_player.tscn" id="5_20vic"]

[node name="DinoRun" type="Node2D"]
script = ExtResource("1_7chjb")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/SkyParallaxLayer"]
position = Vector2(-134, -71)
scale = Vector2(3, 3)
texture = ExtResource("2_nlqoj")
centered = false

[node name="CloudParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(135, 85)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(352, 161)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(613, 229)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(877, 91)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(738, 411)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D7" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(1231, 286)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D8" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(1159, 310)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D9" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(7, 261)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="Sprite2D10" type="Sprite2D" parent="ParallaxBackground/CloudParallaxLayer"]
position = Vector2(1269, 115)
scale = Vector2(3, 3)
texture = ExtResource("3_qejmi")

[node name="GroundParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(3600, 0)

[node name="DinoGround" parent="ParallaxBackground/GroundParallaxLayer" instance=ExtResource("4_20vic")]
position = Vector2(-28, 564)

[node name="DinoPlayer" parent="." instance=ExtResource("5_20vic")]
position = Vector2(300, 300)

[node name="CactusSpawnTimer" type="Timer" parent="."]

[node name="Cactus" type="Node" parent="." groups=["cactus"]]
